# status-report

./: .env.example  .gitignore  PASSO_A_PASSO_STATUS_REPORT_PYTHON.md  README.md  pyproject.toml
scripts/: _introspect_tmp.py  diagnosticar_template.py  inspecionar_etapas_cronograma.py  inspecionar_indice_projetos.py  inspecionar_template.py  inspect_template.py  listar_abas.py  listar_marcadores.py  mostrar_client_id.py  preparar_slides_pf.py  testar_controle_horas.py  testar_geracao_ch.py  testar_projeto_funcional.py  testar_slides_projeto.py  verificar_oracle.py  verificar_pre_execucao.py
src/status_report/: __init__.py  configuracao.py  gui.py  main.py
src/status_report/aplicacao/: __init__.py  agregacao_controle_horas.py  fila_clientes.py  fila_clientes_calendario.py  pipeline_coordenadora.py  pipeline_diario.py  projeto_funcional.py  render_controle_horas.py  render_projeto_funcional.py  renderizacao_relatorio.py
src/status_report/dominio/: __init__.py  modelos.py
src/status_report/infraestrutura/: __init__.py  autenticacao_google.py  repositorio_apresentacao.py  repositorio_calendario.py  repositorio_clientes.py  repositorio_drive.py  repositorio_indice_projetos.py  repositorio_oracle.py  repositorio_planilha.py  repositorio_projeto_funcional.py  repositorio_slides_modelo.py  repositorio_slides_pf.py  repositorio_tabela_slide.py
src/status_report/recursos/: __init__.py
src/status_report/renderizadores/: __init__.py  protocolo.py  registro.py  slide_capa.py  slide_fechamento.py
