[project]
name = "status-report-automation"
version = "0.1.0"
description = "Automacao de Status Report"
authors = [
    {name = "Pedro"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "google-api-python-client (>=2.195.0,<3.0.0)",
    "google-auth (>=2.50.0,<3.0.0)",
    "google-auth-oauthlib (>=1.3.1,<2.0.0)",
    "google-auth-httplib2 (>=0.3.1,<0.4.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "tzdata (>=2026.2,<2027.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[project.scripts]
status-report = "status_report.main:main"
status-report-gui = "status_report.gui:main"

[tool.poetry]
packages = [{ include = "status_report", from = "src" }]
include = [{ path = "src/status_report/recursos/*.png", format = ["sdist", "wheel"] }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "python-pptx (>=1.0.2,<2.0.0)"
]
